--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -6,7 +6,7 @@
 	width: 50%;
 	height: 100%;
 	background-size: cover;
-	background-color: #e5e5e5;
+	background-color: #333333;
 	background-position: center;
 	position: absolute;
 	right: 0;
